--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     implementation libs.volley
     implementation(platform("com.google.firebase:firebase-bom:34.2.0"))
     implementation("com.google.firebase:firebase-analytics")
+    implementation("com.google.firebase:firebase-messaging")
     implementation 'com.github.bumptech.glide:glide:5.0.5'
+    implementation 'com.google.android.gms:play-services-ads:24.7.0'
 
 
 
