--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation("com.google.firebase:firebase-messaging")
     implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'com.google.android.gms:play-services-ads:24.7.0'
+    implementation project(':nativetemplates')
 
 
 
