--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'com.google.android.gms:play-services-ads:24.7.0'
     implementation project(':nativetemplates')
+    implementation libs.pickerimages
 
 
 
