--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+pickerimages = "1.1.1"
 volley = "1.2.1"
 
 [libraries]
@@ -22,6 +23,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+pickerimages = { module = "com.github.AkSoftwareSolution:pickerImages", version.ref = "pickerimages" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
 
 [plugins]
