--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -45,7 +46,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'com.google.android.gms:play-services-ads:24.7.0'
     implementation project(':nativetemplates')
-    implementation libs.pickerimages
+    implementation("com.google.android.ump:user-messaging-platform:4.0.0")
 
 
 
