--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.aksoftwaresolution.wellpick"
         minSdk 24
         targetSdk 36
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:24.7.0'
     implementation project(':nativetemplates')
     implementation("com.google.android.ump:user-messaging-platform:4.0.0")
+    implementation "com.android.billingclient:billing:8.3.0"
 
 
 
