--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,11 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation libs.volley
-    implementation(platform("com.google.firebase:firebase-bom:34.2.0"))
+    implementation(platform('com.google.firebase:firebase-bom:34.8.0'))
     implementation("com.google.firebase:firebase-analytics")
     implementation("com.google.firebase:firebase-messaging")
     implementation 'com.github.bumptech.glide:glide:5.0.5'
-    implementation 'com.google.android.gms:play-services-ads:24.7.0'
+    implementation 'com.google.android.gms:play-services-ads:24.9.0'
     implementation project(':nativetemplates')
     implementation("com.google.android.ump:user-messaging-platform:4.0.0")
     implementation "com.android.billingclient:billing:8.3.0"
