--- a/nativetemplates/build.gradle
+++ b/nativetemplates/build.gradle
@@ -7,7 +7,6 @@ android {
     defaultConfig {
         minSdkVersion 21
         //noinspection EditedTargetSdkVersion
-        targetSdkVersion 36
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -15,26 +14,32 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pgcfg'
-            consumerProguardFiles 'proguard-rules.pgcfg'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'
+            ), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
-        resourcePrefix 'gnt_'
+    lint {
+        targetSdk 36
     }
+    testOptions {
+        targetSdk 36
+    }
+    buildToolsVersion '36.1.0 rc1'
+    ndkVersion '36'
+
 }
 
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.android.gms:play-services-ads:24.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.errorprone:error_prone_annotations:2.16'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    implementation 'com.google.android.gms:play-services-ads:24.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'com.google.errorprone:error_prone_annotations:2.46.0'
 }
